Added new styles. Fixed html markup

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8"/>
         <title>Résumé</title>
@@ -7,93 +7,102 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
-        <main>
-            <h1>Hennadii Nikitenko Resume</h1>
-            <section class="info">
-                <div class="info-avatar">
-                    <img src="assets/avatar.jpg" alt="Hennadii">
-                </div>
-                <div class="info-block">
-                    <h2 class="info-title">Hennadii Nikitenko</h2>
-                    <h3 class="info-subtitle">Full-Stack Developer</h3>
-                </div>
-            </section>
-            <section class="contacts">
-                <h2 class="contacts-title">Contacts</h2>
-                <ul class="contacts-list">
-                    <li class="contacts-item">
-                        <span>Mail</span>
-                        <a target="_blank" href="mailto:vankert353@gmail.com">vankert353@gmail.com</a>
-                    </li>
-                    <li class="contacts-item">
-                        <span>Facebook</span>
-                        <a target="_blank" href="https://www.facebook.com/profile.php?id=100009552425424">vankert353</a>
-                    </li>
-                    <li class="contacts-item">
-                        <span>LinkedIn</span>
-                        <a target="_blank" href="https://www.linkedin.com/in/hennadii-nikitenko-b68494a0/">Hennadii Nikitenko</a>
-                    </li>
-                </ul>
-            </section>
-            <section class="about">
-                <h2 class="about-title">About Me</h2>
-                <p class="about-text">
-                    I am a Full-Stack Developer with a passion for creating dynamic and responsive web applications. I have experience in front-end development, and I am always eager to learn new technologies and improve my skills.<br/>
-                    I am a team player who enjoys collaborating with others to solve complex problems and deliver high-quality software solutions. I am also comfortable working independently and taking ownership of projects from start to finish.<br/>   
-                    I am looking for opportunities to work on challenging projects that will allow me to grow as a developer and make a positive impact on the world through technology.
-                </p>
-            </section>
-            <section class="skills">
-                <h2 class="skills-title">Skills</h2>
-                <ul class="skills-list">
-                    <li class="skills-item">HTML</li>
-                    <li class="skills-item">CSS</li>
-                    <li class="skills-item">SASS(SCSS)</li>
-                    <li class="skills-item">JavaScript</li>
-                    <li class="skills-item">TypeScript</li>
-                    <li class="skills-item">React</li>
-                    <li class="skills-item">Git</li>
-                </ul>
-            </section>
-            <section class="education">
-                <h2 class="education-title">Education</h2>
-                <ul class="education-list">
-                    <li class="education-item">
-                        <span>2011 - 2015</span>
-                        <p>National Metallurgical Academy of Ukraine, Bachelor of Computer Science</p>
-                    </li>
-                </ul>
-            </section>
-            <section class="experience  ">
-                <h2 class="experience-title">Experience</h2>
-                <ul class="experience-list">
-                    <li class="experience-item">
-                        <span>2021 - 2022</span>
-                        <p>QA engineer at Binary Studio</p>
-                        <ul class="experience-list-item">
-                            <li class="experience-item-text">Software analysis and testing</li>
-                            <li class="experience-item-text">Development of test scripts</li>
-                            <li class="experience-item-text">Detection and documentation of errors</li>
-                            <li class="experience-item-text">Collaboration with developers to fix errors</li>
-                            <li class="experience-item-text">Development of test documentation</li>
-                        </ul>
-                    </li>
-                    <li class="experience-item">
-                        <span>2020 - 2021</span>
-                        <p>Web Developer at SlicePlanet</p>
-                        <ul class="experience-list-item">
-                            <li class="experience-item-text">Development of web pages using HTML, CSS, JS</li>
-                        </ul>
-                    </li>
-                    <li class="experience-item">
-                        <span>2017 - 2020</span>
-                        <p>Web Developer at Absolute Service</p>
-                        <ul class="experience-list-item">
-                            <li class="experience-item-text">Development of web pages using HTML, CSS, JS, PHP, Wordpress</li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
+        <main class="main">
+            <div class="wrapper">
+                <h1 class="visually-hidden">Hennadii Nikitenko Resume</h1>
+                <section class="info">
+                    <div class="info-avatar">
+                        <img src="assets/avatar.jpg" alt="Hennadii">
+                    </div>
+                    <div class="info-block">
+                        <h2 class="info-title">Hennadii Nikitenko</h2>
+                        <h3 class="info-subtitle">Full-Stack Developer</h3>
+                    </div>
+                </section>
+                <section class="contacts">
+                    <h2 class="contacts-title sub-title">Contacts</h2>
+                    <ul class="contacts-list">
+                        <li class="contacts-item">
+                            <span class="visually-hidden">Mail</span>
+                            <a class="contacts-item__link" target="_blank" href="mailto:vankert353@gmail.com">
+                                vankert353@gmail.com
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
+                            </a>
+                        </li>
+                        <li class="contacts-item">
+                            <span class="visually-hidden">Facebook</span>
+                            <a class="contacts-item__link" target="_blank" href="https://www.facebook.com/profile.php?id=100009552425424">
+                                vankert353
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"/></svg>
+                            </a>
+                        </li>
+                        <li class="contacts-item">
+                            <span class="visually-hidden">LinkedIn</span>
+                            <a class="contacts-item__link" target="_blank" href="https://www.linkedin.com/in/hennadii-nikitenko-b68494a0/">
+                                Hennadii Nikitenko
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+                <section class="about">
+                    <h2 class="about-title sub-title">About Me</h2>
+                    <p>I am a Full-Stack Developer with a passion for creating dynamic and responsive web applications. I have experience in front-end development, and I am always eager to learn new technologies and improve my skills.</p>
+                    <p>I am a team player who enjoys collaborating with others to solve complex problems and deliver high-quality software solutions. I am also comfortable working independently and taking ownership of projects from start to finish.</p>
+                    <p>I am looking for opportunities to work on challenging projects that will allow me to grow as a developer and make a positive impact on the world through technology.</p>
+                </section>
+                <section class="skills">
+                    <h2 class="skills-title sub-title">Skills</h2>
+                    <ul class="skills-list">
+                        <li class="skills-item">HTML</li>
+                        <li class="skills-item">CSS</li>
+                        <li class="skills-item">SASS(SCSS)</li>
+                        <li class="skills-item">JavaScript</li>
+                        <li class="skills-item">TypeScript</li>
+                        <li class="skills-item">React</li>
+                        <li class="skills-item">Git</li>
+                    </ul>
+                </section>
+                <section class="education">
+                    <h2 class="education-title sub-title">Education</h2>
+                    <ul class="education-list">
+                        <li class="education-item">
+                            <span>2011 - 2015</span>
+                            <p>National Metallurgical Academy of Ukraine, Bachelor of Computer Science</p>
+                        </li>
+                    </ul>
+                </section>
+                <section class="experience">
+                    <h2 class="experience-title sub-title">Experience</h2>
+                    <ul class="experience-list">
+                        <li class="experience-item">
+                            <span>2021 - 2022</span>
+                            <p>QA engineer at "Binary Studio"</p>
+                            <ul class="experience-list__innner">
+                                <li class="experience-list__inner-item">Software analysis and testing</li>
+                                <li class="experience-list__inner-item">Development of test scripts</li>
+                                <li class="experience-list__inner-item">Detection and documentation of errors</li>
+                                <li class="experience-list__inner-item">Collaboration with developers to fix errors</li>
+                                <li class="experience-list__inner-item">Development of test documentation</li>
+                            </ul>
+                        </li>
+                        <li class="experience-item">
+                            <span>2020 - 2021</span>
+                            <p>Web Developer at "SlicePlanet"</p>
+                            <ul class="experience-list__innner">
+                                <li class="experience-list__inner-item">Development of web pages using HTML, CSS, JS</li>
+                            </ul>
+                        </li>
+                        <li class="experience-item">
+                            <span>2017 - 2020</span>
+                            <p>Web Developer at "Absolute Service"</p>
+                            <ul class="experience-list__innner">
+                                <li class="experience-list__inner-item">Development of web pages using HTML, CSS, JS, PHP, Wordpress</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </main>
     </body>
 </html>
